corrected position of exit button on smaller screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -276,8 +276,9 @@ white: rgba(255, 255, 255, 1)
     color:#fff;
 
     position:fixed;
-    top:0%;
-    left:0%;
+    right:1%;
+    top:90%;
+    text-align: center;
 
     border:none;
     border-radius:50%;
@@ -290,10 +291,6 @@ white: rgba(255, 255, 255, 1)
 
     z-index:3;
     }
-}
-
-.basket-button-exit {
-    
 }
 
 /* plant to find display */
